[package]
name = "ipfs-tunnels-manager"
version = "0.6.0"
edition = "2021"

[lib]
name = "ipfs_tunnels_manager"
path = "src/lib.rs"

[[bin]]
name = "ipfs-tunnels-manager"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json", "query"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dirs = "6.0.0"
anyhow = "1.0"
notify = "8.2.0"
sys-locale = "0.3.2"
multiaddr = "0.18.2"
tempfile = "3.27.0"
clap = { version = "4.6.1", features = ["derive"] }
axum = "0.8.9"
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
serde_json = "1.0.150"

[dev-dependencies]
wiremock = "0.6.5"
